fix(view) .fancybox-overlay: set z-index: 0

--- a/css/view.css
+++ b/css/view.css
@@ -23,6 +23,10 @@
     z-index: 1
 }
 
+.fancybox-overlay {
+    z-index: 0;
+}
+
 .media, video {
     width: 100%;
 }
